@@ -25,6 +25,7 @@ class TestUpdateAgent(unittest.TestCase):
     def setup_method(self, method):
 
         self.application = self.get_application()
+        self.application.add_new_page(self.get_page())
 
     def test_flash_message(self):
 
@@ -32,7 +33,7 @@ class TestUpdateAgent(unittest.TestCase):
         self.application.flash_message(None)
 
     def test_on_activate_next_project_activate(self):
-
+z
         self.application.notebook.set_current_page(0)
         self.application.on_activate_next_project_activate()
 
